Fix menu hamburger being too far right on mobile screen.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -509,6 +509,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 
 .feature-content {
 	padding-left:100px;
+    overflow-x: auto;
 }
 
 /* -- About Img -- */
